[gd_scene load_steps=6 format=3 uid="uid://dyfm24oiltmf1"]

[ext_resource type="Script" uid="uid://dtmiq7r231ax" path="res://scripts/hand.gd" id="1_a0tk4"]
[ext_resource type="PackedScene" uid="uid://btveqgjha5nuq" path="res://prefabs/creature_slot.tscn" id="3_a0tk4"]
[ext_resource type="Script" uid="uid://b5loyaj32c0sm" path="res://scripts/drawPile.gd" id="4_jka67"]
[ext_resource type="Script" uid="uid://cu8i8muqngo52" path="res://mainCamera.gd" id="4_r3fl7"]
[ext_resource type="Script" uid="uid://lpwfiomi8vwn" path="res://scripts/discardPile.gd" id="5_i5arm"]

[node name="Main" type="Node3D"]

[node name="Hand" type="Node3D" parent="." node_paths=PackedStringArray("camera")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.315, 0)
script = ExtResource("1_a0tk4")
camera = NodePath("../MainCamera")
max_card_offset = 4.0
metadata/_custom_type_script = "uid://dtmiq7r231ax"

[node name="MainCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)
script = ExtResource("4_r3fl7")
metadata/_custom_type_script = "uid://cu8i8muqngo52"

[node name="CreatureSlot" parent="." instance=ExtResource("3_a0tk4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 0)

[node name="CreatureSlot2" parent="." instance=ExtResource("3_a0tk4")]

[node name="CreatureSlot3" parent="." instance=ExtResource("3_a0tk4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 0)

[node name="DrawPile" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.0071716, 0, 0)
script = ExtResource("4_jka67")
metadata/_custom_type_script = "uid://b5loyaj32c0sm"

[node name="DiscardPile" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.6926746, 0, 0)
script = ExtResource("5_i5arm")
metadata/_custom_type_script = "uid://lpwfiomi8vwn"
